# lightning-offline

./: .env.alice  .env.bob  Cargo.toml  README.md
cli/: cargo.toml
cli/src/: main.rs
data/: alice.db  lightning.db
migrations/: 001_initial.sql
src/: api.rs  channel.rs  crypto.rs  main.rs  p2p.rs  storage.rs
