[package]
name = "lightning-offline"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = "0.29"
bitcoin = "0.32"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
libp2p = { version = "0.53", features = ["tcp", "tokio", "mdns", "noise", "yamux", "gossipsub", "identify", "macros" ] }
futures = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"